# xarray-regrid

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  environment.yml  pyproject.toml
.github/workflows/: build_test.yml  lint.yml  publish.yml
benchmarks/: benchmark_utils.py  benchmarking_bilinear.ipynb  benchmarking_conservative.ipynb  benchmarking_nearest.ipynb
demo/: demo_most_common.ipynb
docs/: Makefile  conf.py  getting_started.rst  index.rst  make.bat
docs/notebooks/: index.rst
docs/notebooks/benchmarks/: benchmark_utils.py  benchmarking_bilinear.ipynb  benchmarking_conservative.ipynb  benchmarking_nearest.ipynb  benchmarking_xesmf.ipynb
docs/notebooks/benchmarks/data/: README.md  cdo_conservative_64b.nc  new_grid.nc
docs/notebooks/demos/: demo_conservative_nan_threshold.ipynb  demo_most_common.ipynb  demo_variance.ipynb
src/xarray_regrid/: __init__.py  methods.py  most_common.py  regrid.py  utils.py
src/xarray_regrid/methods/: __init__.py  _shared.py  conservative.py  flox_reduce.py  interp.py  most_common.py
tests/: test_format.py  test_most_common.py  test_reduce.py  test_regrid.py  test_utils.py
